Add main foto and tear-off calendar sheets

--- a/src/sass/index_date_style.sass
+++ b/src/sass/index_date_style.sass
@@ -44,7 +44,8 @@ header, .about_me_brif, .movie
         flex-direction: row
         justify-content: center
         align-items: center
-        text-align: center        
+        text-align: center
+        position: relative        
         +tablet 
             flex-direction: column
         +mobile
@@ -63,6 +64,10 @@ header, .about_me_brif, .movie
             a
                 font-size: 1em
                 text-decoration: none
+        .logo_70
+            width: 100px
+            height: 100px
+
 
 .about_me__brif_titel,  .movie__subtitel 
     font-family: 'Russo One'
@@ -83,6 +88,10 @@ header, .about_me_brif, .movie
     +mobile
         font-size: 16px
         text-align: center
+    .logo_70
+        width: 70px
+        height: 70px    
+
 .timeline_block    
     display: block
 
