--- a/src/sass/index_date_style.sass
+++ b/src/sass/index_date_style.sass
@@ -109,10 +109,25 @@ header, .about_me_brif, .movie
         margin-left: 0px  
     &__info
         display: flex
-        flex-direction: column
+        flex-direction: row
         text-align: center        
         margin-top: 20px
+        justify-content: center
+        align-items: center
+        position: relative
         &__cover
-            max-width: 97%
+            max-height: 80vh
             align-self: center
             box-shadow: 2px 4px 10px black
+        .prevBtn, .nextBtn
+            margin: 20px            
+            width: 100px
+            height: 100px
+            border-radius: 50%
+            border-style: none
+            &:hover
+                box-shadow:  1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue
+                transform:  scale(1.05, 1.05)
+   
+        .arrow
+            width: 100%
