--- a/src/sass/index_date_style.sass
+++ b/src/sass/index_date_style.sass
@@ -112,22 +112,30 @@ header, .about_me_brif, .movie
         flex-direction: row
         text-align: center        
         margin-top: 20px
+        margin-bottom: 20px
         justify-content: center
         align-items: center
         position: relative
         &__cover
             max-height: 80vh
+            max-width: 95%
             align-self: center
             box-shadow: 2px 4px 10px black
+    &__control
+        display: flex
+        justify-content: center    
         .prevBtn, .nextBtn
-            margin: 20px            
-            width: 100px
-            height: 100px
+            margin: 10px            
+            width: 60px
+            height: 60px
             border-radius: 50%
             border-style: none
+            background-color: rgba(0,0,0,0)
             &:hover
-                box-shadow:  1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue
-                transform:  scale(1.05, 1.05)
-   
+                transform:  scale(1.1, 1.1)
+            +mobile
+                margin: 10px            
+                width: 40px
+                height: 40px
         .arrow
-            width: 100%
+            height: 100%
