--- a/src/sass/index_date_style.sass
+++ b/src/sass/index_date_style.sass
@@ -110,8 +110,7 @@ header, .about_me_brif, .movie
     &__info
         display: flex
         flex-direction: row
-        text-align: center        
-        margin-top: 20px
+        text-align: center 
         margin-bottom: 20px
         justify-content: center
         align-items: center
@@ -139,3 +138,13 @@ header, .about_me_brif, .movie
                 height: 40px
         .arrow
             height: 100%
+.faded
+    animation-name: faded
+    animation-duration: .8s
+
+@keyframes faded
+    from
+        opacity: 0.1
+    to
+        opacity: 1
+        
