add Газета newspaper Truth 16_12_1953_N350 pdf

--- a/src/sass/index_date_style.sass
+++ b/src/sass/index_date_style.sass
@@ -147,4 +147,18 @@ header, .about_me_brif, .movie
         opacity: 0.1
     to
         opacity: 1
-        
+
+.newspaper_logo
+    width: 50%
+    margin-bottom: 40px 
+    +mobile
+        width: 95%
+
+.newspaper-Truth_img
+    padding: 0px 0px
+    max-height: 80vh
+    max-width: 100%
+    align-self: center
+    box-shadow: 2px 4px 10px black
+    &:hover
+        box-shadow: 2px 4px 10px blue
